# vast-cli

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  __init__.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  vast.py
changelog/: index.html
cli/: index.html
cli/client/: index.html
cli/client/autoscaling/: index.html
cli/client/billing/: index.html
cli/client/instances/: index.html
cli/client/keys/: index.html
cli/client/search/: index.html
cli/client/ssh/: index.html
cli/client/teams/: index.html
cli/client/volumes/: index.html
cli/commands/: index.html
cli/examples/: index.html
cli/host/: index.html
cli/host/clusters/: index.html
cli/host/machines/: index.html
cli/host/maintenance/: index.html
cli/host/reports/: index.html
docs/: index.md  installation.md
docs/cli/: commands.md  examples.md  index.md
docs/cli/client/: search.md
docs/cli/host/: maintenance.md
docs/guides/: migration.md
docs/sdk/: quickstart.md
docs/sdk/reference/: vastai.md
guides/migration/: index.html
installation/: index.html
scripts/: generate_detailed_cli_docs.py
sdk/: index.html
sdk/quickstart/: index.html
sdk/reference/methods/: index.html
sdk/reference/vastai/: index.html
search/: search_index.json
serverless/: index.html
tests/: conftest.py
tests/regression/: test_cfix01_mutable_defaults.py  test_cfix02_http_exception.py  test_cfix03_timezone.py  test_cfix04_show_instances.py  test_cfix05_show_machine.py  test_cfix06_parse_query.py  test_cfix07_hardcoded_raw.py  test_cfix08_return_response.py  test_cfix09_namespace_typo.py  test_cfix10_sdk_timezone_import.py  test_cfix11_sdk_except_pass.py  test_hfix01_timeout.py  test_hfix02_retry.py  test_hfix03_json_decode.py  test_hfix04_bare_except.py  test_hfix05_shell_injection.py  test_hfix06_utc_display.py  test_hfix07_direct_requests.py  test_hfix08_raw_errors.py  test_hfix09_utcfromtimestamp.py  test_hfix10_safe_dict_access.py  test_hfix11_unreachable_code.py  test_hfix12_raw_completeness.py  test_mfix_01_04_05.py  test_mfix_02_03_06.py  test_mfix_08_09_13.py  test_mfix_10_11_12.py  test_sdk_integration.py  test_serverless_lazy_import.py
tests/unit/: test_timezone.py
vastai/: __init__.py  __main__.py  sdk.py  vastai_base.py
vastai/serverless/client/: client.py
